# second_uni

./: .gitignore  README.md
basics_of_algorithmization_and_programming/lab1/: CMakeLists.txt  README.MD  lab1.cpp
basics_of_algorithmization_and_programming/lab1/src/: CMakeLists.txt
basics_of_algorithmization_and_programming/lab1/src/include/: area.hpp  calculate.hpp
basics_of_algorithmization_and_programming/lab1/tests/: CMakeLists.txt  all_tests.cpp
basics_of_algorithmization_and_programming/lab2/: CMakeLists.txt  README.MD  lab2.cpp
basics_of_algorithmization_and_programming/lab2/src/: CMakeLists.txt
basics_of_algorithmization_and_programming/lab2/src/include/: calc_a_foo.hpp  is_in_shaded.hpp  triangle_type_str.hpp
basics_of_algorithmization_and_programming/lab2/src/part2_1/: CMakeLists.txt
basics_of_algorithmization_and_programming/lab2/src/part2_1/include/: calc_a_foo.hpp  is_in_shaded.hpp  triangle_type_str.hpp
basics_of_algorithmization_and_programming/lab2/src/part2_2/: CMakeLists.txt
basics_of_algorithmization_and_programming/lab2/src/part2_2/include/: 2_2_1.hpp  2_2_2.hpp
basics_of_algorithmization_and_programming/lab2/tests/: all_tests.cpp
basics_of_algorithmization_and_programming/lab3/: CMakeLists.txt  README.MD  main.cpp
basics_of_algorithmization_and_programming/third_teacher/: useless_code.py  useless_code_2.py  useless_code_3.py
basics_of_algorithmization_and_programming/third_teacher/lab5_pass_gen/: CMakeLists.txt  main.cpp
